# templit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_template.md
templit/: __init__.py  base.py  cli.py  color.py  config.py  registry.py
templit/commands/: init.py  list.py  manage.py  use.py
templit/sources/: __init__.py  builtin.py  disk.py
templit/templates/: dockerfile-python.json  editorconfig.json  github-actions-python.json  github-pages.json  gitignore-python.json  go-basic.json  go-cli.json  makefile-python.json  node-basic.json  node-express.json  pre-commit.json  python-basic.json  python-cli.json  python-fastapi.json  python-pytest.json  react-app.json  rust-basic.json  rust-cli.json
tests/: test_base.py  test_cli.py  test_registry.py
