[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "templit"
version = "0.2.0"
description = "Fast project template scaffolding for the impatient"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

authors = [
  { name = "", email = "" }
]

keywords = ["scaffolding", "templates", "cli", "boilerplate", "developer-tools"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage   = "https://github.com/yourname/templit"
Repository = "https://github.com/yourname/templit"
Issues     = "https://github.com/yourname/templit/issues"
Changelog  = "https://github.com/yourname/templit/blob/main/CHANGELOG.md"

[project.scripts]
templit = "templit.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
  "mypy",
]

# ── setuptools ───────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
templit = ["templates/*.json"]

# ── pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q"

# ── coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["templit"]
omit   = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty   = true

# ── ruff (linter + formatter) ────────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["templit"]

# ── mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version         = "3.9"
strict                 = true
ignore_missing_imports = true
